--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,10 +7,20 @@
 }
 
 
-/* navegación */
+/* Welcome */
 
 
 /* Destinos */
+
+/* Nosotros */
+
+/* Paquetes */
+
+
+/* Galería */
+
+
+/* Foother */
 
 
 
