estilos index y fondo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,12 +6,115 @@
     box-sizing: border-box;
 }
 
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 
-/* navegación */
+body {
+    background-color: #f2f2f2;
+    font-family: 'Chelsea Market', cursive;
+}
 
 
-/* Destinos */
+/* header */
 
+.hero {
+    background-image: url('../img/FONDO.png');
+    height: 100vh;
+    background-position: top center;
+    background-size: cover;
+    position: relative;
+} 
 
+.contenido-header {
+    padding-top: 40px;
+}
 
+.redes-sociales {
+    text-align: center;
+}
 
+.redes-sociales a {
+    color: #ffffff;
+    font-size: 3em;
+    margin-right: 20px;    
+}
+
+.redes-sociales a:last-child {
+    margin-right: 0px;
+}
+
+.informacion {
+    text-align: left;
+    width: 25%;
+    color: #18047D;
+    margin-top: 20px;
+}
+
+.informacion p {
+    margin: 0;
+    margin-top: 30px;
+    padding-left: 20px;
+    font-family: 'Chelsea Market', cursive;
+    font-size: 2em;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+h1 {
+    text-align: center;
+    color: #F20A0A;
+    font-size: 4em;
+    text-transform: uppercase;
+    font-family: 'Monoton', cursive;
+    margin-top: 30px;
+}
+
+.slogan {
+    position: absolute;
+    margin: 0;
+    bottom: 2em;
+    /* margin-bottom: 30px; */
+    margin-left: 30px;
+    width: 70%;
+    color: #ffffff;
+    font-size: 2em;
+    font-family: 'Cantarell', sans-serif;
+    /* text-align: center; */
+}
+
+.boton {
+    margin: 0 auto;
+    border: none;
+    min-width: 180px;
+    height: 50px;
+    padding: 0.3px;
+    background: #000;
+    color: #fff;
+    display: inline-block;
+    border-radius: 100px;
+    text-decoration: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background: #C90842;
+    transition: .3s ease all;
+}
+
+@media (min-width: 768px) {
+    .informacion p {
+        font-size: 3em;
+    }
+    
+    h1 {
+        font-size: 5em;
+    }
+     
+    /* .slogan {
+        font-size: 3em;
+    } */
+}
+/* @media (max-width: 5750px) {
+
+    
+} */
