--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,3 +6,312 @@
     box-sizing: border-box;
 }
 
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+body {
+    background-color: #f2f2f2;
+    font-family: 'Chelsea Market', cursive;
+}
+
+
+/* header */
+
+.hero {
+    background-image: url('../img/FONDO.png');
+    height: 100vh;
+    background-position: top center;
+    background-size: cover;
+    position: relative;
+}
+
+
+
+.contenido-header {
+    padding-top: 40px;
+}
+
+.redes-sociales {
+    text-align: center;
+}
+
+.redes-sociales a {
+    color: #ffffff;
+    font-size: 3em;
+    margin-right: 20px;
+}
+
+.redes-sociales a:last-child {
+    margin-right: 0px;
+}
+
+.informacion {
+    text-align: left;
+    width: 50%;
+    color: #18047D;
+    margin-top: 50px;
+}
+
+.bienvenido{
+    padding-left: 20px;
+    font-family: 'Chelsea Market', cursive;
+    font-size: 5vw;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.Inicio {
+    font-size: 9vw ;
+    text-transform: uppercase;
+    font-family: 'Monoton', cursive;
+    color: #F20A0A;
+          
+}
+
+.slogan {
+
+    position: absolute;
+    margin: 0;
+    margin-left: 30px;
+    width: 70%;
+    color: #ffffff;
+    font-size: 4vw;
+    font-family: 'Cantarell', sans-serif;
+}
+
+.boton {
+    margin: 0 auto;
+    border: none;
+    min-width: 180px;
+    height: 50px;
+    padding: 0.4px;
+    background: #000;
+    color: #fff;
+    display: inline-block;
+    border-radius: 15px;
+    text-decoration: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background: #C90842;
+    transition: .3s ease all;
+}
+.bot_inicio{
+    text-align: center;
+
+}
+.bot_destino{
+    padding-top: 200px;
+    padding-left: 10px;
+    text-align: left;
+}
+
+
+.card {
+    border-radius: 10px;
+    min-height: 300px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+    color: #f2f2f2;
+    background-size: cover;
+
+
+
+}
+
+.box {
+    position: relative;
+}
+
+.box img {
+    max-width: 400px;
+}
+
+.boton__texto {
+    font-weight: bold;
+    color: #f2f2f2;
+}
+
+/* estilos de NOSOTROS*/
+
+.contenedorNosotros {
+    background-image: url(../img/fondoNosotros.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    height: 100vh;
+    position: relative;
+}
+
+.Nosotros {
+    font-family: 'Chelsea Market', cursive;
+    margin-top: 30px;
+    color: #06234e;
+}
+
+.tituNosotros {
+    font-family: 'Chelsea Market', cursive;
+    color: #06234e;
+
+}
+
+.iconos-nosotros {
+    display: flex;
+    justify-content: space-between;
+}
+
+.iconos {
+    flex-basis: calc(33.3% - 1rem);
+}
+
+.iconos h3 {
+    text-align: center;
+}
+
+
+/*ESTILOS PAQUETES*/
+.ContenedorPaquete {
+    background-image: url(../img/fondoPaquete.jpg);
+    max-height: 100vh;
+    max-width: 100vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    position: relative;
+ 
+
+}
+
+.paquetes {
+    font-family: 'Chelsea Market', cursive;
+    margin-top: 30px;
+    color: #06234e;
+    text-shadow: -0.5px -0.5px white, 0.5px 0.5px white;
+}
+
+.imagen_1 {
+    background-image: url(../img/pachapupum.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    max-height: 400px;
+    max-width: 225px;
+    padding-top: 0px;
+    display: inline-block;
+    
+
+}
+
+.imagen_2 {
+    background-image: url(../img/aguaTurq.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 400px;
+    width: 225px;
+    padding-top: 0px;
+    display: inline-block;
+
+
+}
+
+.imagen_3 {
+    background-image: url(../img/quinua.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 400px;
+    width: 225px;
+    padding-top: 0px;
+    display: inline-block;
+
+
+}
+
+.imagen_4 {
+
+    background-image: url(../img/vilcas.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 290px;
+    width: 225px;
+    padding-left: 0px;
+    display: inline-block;
+
+
+}
+
+.boton1 {
+    border-radius: 5%;
+    padding: 4px 8px;
+    background-color: #06234e;
+    color: floralwhite;
+    border: none;
+
+}
+
+.boton2 {
+    border-radius: 5%;
+    padding: 4px 8px;
+    background-color: #06234e;
+    color: floralwhite;
+    border: none;
+
+}
+
+.boton3 {
+    border-radius: 5%;
+    padding: 4px 8px;
+    background-color: #06234e;
+    color: floralwhite;
+    border: none;
+}
+
+.boton4 {
+    border-radius: 5%;
+    padding: 4px 8px;
+    background-color: #06234e;
+    color: floralwhite;
+    border: none;
+}
+
+
+.bot-paquete {
+    padding-top: 200px;
+    padding-left: 10px;
+    text-align: left;
+}
+
+.name {
+    padding-left: 0px;
+    text-align: left;
+    color: aliceblue;
+}
+
+.precio {
+    text-align: center;
+    color: aliceblue;
+    vertical-align: 1px;
+}
+
+.botonCrear {
+    border-radius: 5%;
+    padding: 4px 8px;
+    background-color: #C90842;
+    color: floralwhite;
+    border: none;
+}
+
+/*ESTILOS DE GALERÍA*/
+.ContenedorGaleria {
+    position: relative;
+}
+
+.Galeria {
+    font-family: 'Chelsea Market', cursive;
+    margin-top: 30px;
+    color: #06234e;
+
+}
