--- a/css/estilosNosotros.css
+++ b/css/estilosNosotros.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-.contenedor{
+.contenedorNosotros{
     background-image: url(../img/fondoNosotros.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -29,4 +29,8 @@
 }
 .iconos h3{
     text-align: center;
+}
+.h1{
+    font-family: 'Chelsea Market', cursive;
+
 }
