--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,21 +18,27 @@ body {
 }
 
 /*Estilos cabecera*/
+
 .containerCabecera {
     width: 85%;
     max-width: 850px;
     margin: 0 auto;
-    z-index: 1;
+    height: 2.5rem;
+    
 }
 
 .header {
-    background: rgb(240, 237, 237);
+    background-color: rgb(78, 102, 118);;
     color: #fff;
     padding: 2rem 0;
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
+    display: flex;
+    justify-content: space-between;
+    z-index: 1;
+
 }
 
 .header a {
@@ -48,12 +54,11 @@ body {
 
 }
 
-.menu-icon {
+.Menu-icon {
     display: none;
 }
 
 .navegacion {
-
     margin: 0;
     padding: 0;
     list-style: none;
@@ -61,6 +66,7 @@ body {
 
 .navegacion ul li {
     display: inline-block;
+
 }
 
 .navegacion ul li a {
@@ -68,14 +74,16 @@ body {
     padding: 0.5rem 1rem;
     transition: all 0.4s linear;
     border-radius: 5px;
+
 }
 
 .navegacion ul li a:hover {
     background: #4a4a4a;
+    color: #f2f2f2;
 }
 
-@media only screen and (max-width:767px) {
-    .menu-icon {
+@media only screen and (max-width:896px) {
+    .Menu-icon {
         display: block;
         cursor: pointer;
     }
@@ -90,9 +98,9 @@ body {
     }
     .navegacion ul.show{
         display: block;
+        background-color: rgb(81, 101, 113);;
+
     }
-
-
     .navegacion ul li {
         display: block;
     }
@@ -106,11 +114,17 @@ body {
 
     .navegacion ul li a:hover {
         background: #4a4a4a;
+        
     }
 
 }
 
 /* Estilos inicio */
+
+.ContenedorInicio {
+    padding-top: 6.5rem;
+    right: 0;
+}
 
 .contenido_inicio {
     background-image: url('../img/FONDO.png');
@@ -118,11 +132,9 @@ body {
     background-position: top center;
     background-size: cover;
     position: relative;
+    
 }
 
-.ContenedorInicio {
-    padding-top: 6rem;
-}
 
 .redes-sociales {
     text-align: center;
@@ -170,6 +182,7 @@ body {
     color: #ffffff;
     font-size: 4vw;
     font-family: 'Cantarell', sans-serif;
+    padding-top: 0%;
 }
 
 .boton {
@@ -228,8 +241,10 @@ body {
     font-weight: bold;
     color: #f2f2f2;
 }
-
 /* estilos de NOSOTROS*/
+.generalNosotros{
+    padding: auto;
+}
 
 .contenedorNosotros {
     background-image: url(../img/fondoNosotros.jpg);
