--- a/css/estilos-crear-paquetes.css
+++ b/css/estilos-crear-paquetes.css
@@ -9,7 +9,9 @@ body {
 }
 
 h1 {
-    color: green;
+    color: rgb(244, 245, 244);
+    padding: 50px;
+    text-align: center;
 }
 
 .form-register {
@@ -17,7 +19,7 @@ h1 {
     background: #24303c;
     padding: 30px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 0px;
     border-radius: 4px;
     font-family: 'calibri';
     color: white;
@@ -66,4 +68,14 @@ h1 {
     color: white;
     margin: 16px 0;
     font-size: 16px;
+}
+.form-register .botonsAtras {
+    width: 100%;
+    background: #c51f43;
+    border-radius: 10px;
+    padding: 12px;
+    color: white;
+    margin: 16px 0;
+    font-size: 16px;
+    
 }
